# agentic-workbench-engine

./: .clinerules  .gitattributes  .gitignore  .roo-settings.json  .workbench-version  README.md  biome.json  package.json  pyproject.toml  state.json  workbench-cli.py
.workbench/hooks/: post-commit  pre-commit  pre-push
.workbench/mcp/: README.md  archive_query_server.py
.workbench/scripts/: arbiter_check.py  cold_zone_monitor.py  compliance_snapshot.py  gate_notification.py  gatekeeper.py  gherkin_validator.py  import_analyzer.py  integration_test_runner.py  memory_rotator.py  mode_keys.py  orchestrator_monitor.py  test_evidence.py  test_orchestrator.py
docs/conversations/: 20260426_0715_28_enforcement-gap-2026-04.md  20260427_1703_02_honor-enforcement-2026-04.md
memory-bank/hot-context/: activeContext.md  decisionLog.md  narrativeRequest.md  progress.md  systemPatterns.md
tests/workbench/: test_codebase_memory_mcp.py
workbench_cli/: __init__.py  __main__.py
